hphp/hack/test/typecheck/constraints/preserve_null.php.like_types.exp
File "preserve_null.php", line 9, characters 10-26:
Invalid return type (Typing[4110])
File "preserve_null.php", line 4, characters 24-24:
Some type constraint(s) are violated here
File "preserve_null.php", line 4, characters 24-24:
T is a constrained type parameter
File "preserve_null.php", line 8, characters 25-27:
Expected int
File "preserve_null.php", line 4, characters 24-24:
But got dynamic
File "preserve_null.php", line 13, characters 10-26:
Invalid return type (Typing[4110])
File "preserve_null.php", line 4, characters 24-24:
Some type constraint(s) are violated here
File "preserve_null.php", line 4, characters 24-24:
T is a constrained type parameter
File "preserve_null.php", line 12, characters 27-29:
Expected int
File "preserve_null.php", line 4, characters 24-24:
But got dynamic
